@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+2/16/17
+ - Added vacuumOpt material - vacuum with optical property. Addressing issue #64.
+
 2/15/17
  - identifying missing hit process by volume name
  - for CAD models, if hitType is not specified, using sensitivity
